# py-chatterbox-tts

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  pr-title-check.yml  python-app.yml
src/: service.py  tts_wrapper.py  voice_manager.py
voices/: Picard.toml
